--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,14 +18,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/feed_bg">
+        android:background="@drawable/prof_bgd">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/feed_item_bg"
             android:orientation="vertical"
-            android:layout_margin="10dp">
+            android:layout_margin="16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -38,16 +38,7 @@
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp">
 
-                <TextView
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="16dp"
-                    android:ellipsize="end"
-                    android:text="Student Info"
-                    android:textAllCaps="true"
-                    android:textColor="@color/colorAccent"
-                    android:textStyle="bold" />
+                />
 
             </LinearLayout>
 
@@ -65,6 +56,8 @@
                 android:paddingLeft="@dimen/list_item_padding_left"
                 android:paddingRight="@dimen/list_item_padding_right"
                 android:paddingTop="12dp"
+                android:layout_marginTop="60dp"
+
                 android:paddingBottom="12dp">
 
                 <TextView
