--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -31,21 +31,46 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         android:id="@+id/login_password"
         android:layout_above="@+id/login_login"
 
         />
 
     <TextView
-        android:onClick="signup_screen"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="05dp"
-        android:textSize="20dp"
-        android:text="Not Registered ? Sign Up"
+        android:textSize="16dp"
+        android:text="Not registered?"
+        android:layout_marginLeft="30dp"
+        android:paddingRight="5dp"
+        android:layout_below="@+id/login_password"
         android:textAlignment="center"
-        android:textColor="@android:color/black"
-        android:id="@+id/login_signup"/>
+        android:id="@+id/not_regis"
+
+
+        />
+
+
+    <TextView
+        android:onClick="signup_screen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="03dp"
+        android:layout_marginLeft="5dp"
+        android:textSize="18dp"
+        android:text="Sign Up"
+        android:textAlignment="center"
+        android:textColor="#009052"
+        android:textStyle="bold"
+        android:id="@+id/login_signup"
+        android:layout_below="@+id/login_password"
+        android:layout_toRightOf="@+id/not_regis"/>
+
+
+
+
 
     <Button
         android:layout_width="match_parent"
