--- a/app/src/main/res/layout/chatroom_studs.xml
+++ b/app/src/main/res/layout/chatroom_studs.xml
@@ -2,13 +2,21 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/chatbkgd">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recyclerview"
-        android:layout_margin="12dp">
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="59dp"
+        android:layout_marginTop="16dp"
+
+        android:padding="10dp"
+
+        >
 
     </android.support.v7.widget.RecyclerView>
     <LinearLayout
@@ -16,7 +24,16 @@
         android:layout_height="wrap_content"
         android:id="@+id/linearlayout"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true">
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/chatbox_round"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+
+        >
 
         <ImageButton
             android:id="@+id/attachfile"
@@ -33,10 +50,12 @@
 
         <Button
             android:id="@+id/sendButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="bottom"
-            android:text="send"/>
+            android:background="@drawable/paperplane"
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="8dp"/>
 
     </LinearLayout>
 
