--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".HomeActivity"
-    tools:showIn="@layout/app_bar_home">
+    tools:showIn="@layout/app_bar_home"
+    android:background="@drawable/home">
 
     <TextView
         android:id="@+id/message"
@@ -21,15 +22,20 @@
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
+        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
+        android:layout_height="60dp"
+        android:background="@drawable/frame"
+        android:alpha="0.5"
+        app:itemIconTint="@android:color/white"
+        app:itemTextColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
+        android:paddingTop="11dp"
+        app:menu="@menu/navigation"
+
+        />
 
     <Button
         android:id="@+id/button3"
