--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -29,7 +29,7 @@
                 android:icon="@drawable/ic_launcher_foreground"
                 android:title="Share" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_aboutUs"
                 android:icon="@drawable/ic_launcher_foreground"
                 android:title="@string/about_us" />
         </menu>
